[tool.poetry]
name = "synapse-nbconvert"
version = "0.1.0"
description = "A simple command line tool to convert Python files to Synapse Notebooks and vice versa."
authors = ["Michael Wellner <michaelwellner@kpmg.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
poethepoet = "^0.13.1"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.931"

[tool.poe.tasks]
lint = [
    { cmd = "isort synbconvert" },
    { cmd = "black synbconvert" },
    { cmd = "flake8 synbconvert" },
    { cmd = "mypy synbconvert" },
    { cmd = "isort features/steps" },
    { cmd = "black features/steps" },
    { cmd = "flake8 features/steps" }
]
test = "behave"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
